--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ header > nav li{
   padding: 0px 8px;
   font-family: 'Montserrat', sans-serif;
 }
-
+/* sull hover si colora lo sfondo del li e cambia il puntatore */
 header > nav li:hover{
   background-color: rgba(0, 0, 0, .4);
   cursor: pointer;
@@ -104,24 +104,75 @@ main{
   float:left;
 }
 
+/* aside di sinistra */
+
 .main-left{
+  padding: 10px 7px;
   width: 200px;
-  /* debug */
-  background-color: #dd8fea;
-  height: 200px;
+  border-radius: 5px;
+  background-color: white;
 }
+
+/* logo e titolo aside sinistra*/
+.left-title{
+  margin-bottom: 10px;
+}
+
+.left-title img{
+  width: 20px;
+  vertical-align: middle;
+}
+
+.left-title h4{
+  font-weight: 600;
+  font-family: sans-serif;
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 18px;
+}
+
+/* serie di link aside sinistra*/
+
+.main-left ul{
+  list-style-type: none;
+}
+
+.main-left li{
+  margin: 15px 0;
+}
+
+.main-left a{
+  font-size: 15px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: darkgreen;
+}
+
+/* parte centrale - article (ha dimensioni variabili mentre gli aside restano fissi) */
 
 .main-center{
   /* larghezza del blocco è 100% - larghezza blocco destro - margini di 15 a dx e sx - larghezza blocco destra */
-  width: calc(100% - 200px - 30px - 300px);
+  width: calc(100% - 200px - 30px - 250px);
   margin: 0 15px;
-  /* debug */
-  background-color: #872198;
-  height: 400px;
+  background-color: white;
+  padding: 15px 10px;
+  border-radius: 5px;
+}
+
+.main-center h2{
+  font-family: sans-serif;
+  text-shadow: 1px 1px lightgrey;
+  margin-bottom: 10px;
+}
+
+.main-center p{
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .main-right{
-  width: 300px;
+  width: 250px;
 }
 
 /* i due div momentaneamente vuoti della parte destra del blocco. definiranno anche l'altezza del blocco main-right che li contiene */
