--- a/css/style.css
+++ b/css/style.css
@@ -151,9 +151,9 @@ main{
 /* parte centrale - article (ha dimensioni variabili mentre gli aside restano fissi) */
 
 .main-center{
-  /* larghezza del blocco è 100% - larghezza blocco destro - margini di 15 a dx e sx - larghezza blocco destra */
-  width: calc(100% - 200px - 30px - 250px);
-  margin: 0 15px;
+  /* larghezza del blocco è 100% - larghezza blocco destro - margini di 20 a dx e sx - larghezza blocco destra */
+  width: calc(100% - 200px - 40px - 200px);
+  margin: 0 20px;
   background-color: white;
   padding: 15px 10px;
   border-radius: 5px;
@@ -171,26 +171,56 @@ main{
   font-weight: 500;
 }
 
-.main-right{
-  width: 250px;
-}
+/* aside di destra */
 
-/* i due div momentaneamente vuoti della parte destra del blocco. definiranno anche l'altezza del blocco main-right che li contiene */
+.main-right{
+  width: 200px;
+}
 
 .main-right div{
   width: 100%;
   margin-bottom: 10px;
-  /* debug */
-  height: 150px;
-  background-color: #dd8fea;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: white;
+}
 
+.main-right h3{
+  font-weight: 600;
+  font-family: sans-serif;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.main-right p{
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 /* footer */
 
 footer{
   width: 100%;
-  height: 80px;
-  /* debug */
-  background-color: lightblue;
+  height: 85px;
+  background-color: white;
+  margin: 15px 0;
+}
+
+.firma{
+  width: 80%;
+  margin: 0 auto 10px;
+  text-align: center;
+  line-height: 2em;
+  color: lightgrey;
+  border-bottom: 1px solid lightgrey;
+}
+
+.facebook, .instagram, .github{
+  float: left;
+  width: 33%;
+  text-align: center;
+}
+.facebook img, .instagram img, .github img{
+  height: 30px;
 }
